# dsg

./: .coveragerc  .gitignore  CLAUDE.md  CURRENT-STATUS.md  EXTRACTED_MIGRATION_FUNCTIONS.py  EXTRACTED_MIGRATION_TESTS.py  INIT_IMPLEMENTATION_NOTES.md  MIGRATION_ARCHAEOLOGY_FINDINGS.md  README.md  SSH_TESTING_PLAN.md  SYNC_DESIGN.md  TERMINAL_TESTING.md  TESTING_INSTRUCTIONS.md  TODO-config-refactoring.md  TODO-production-roadmap.md  TODO-sync-implementation-20250613-094340.md  TODO.md  TRANSACTION_IMPLEMENTATION.md  UNIFIED_TRANSACTION_PLAN.md  btrsnap.toml  checkout-command-proposal.md  debug_character_construction.py  debug_collaborative_workflow.py  debug_fixture_exact.py  debug_manifest.py  debug_scanner_keys.py  debug_simple_normalization.py  debug_sync_states.py  hash-chain-verification-summary.md  install.sh  metadata-fix-summary.md  migration-refactoring-summary.md  migration-status-summary.md  migration_repos.sh  phase2-refactoring-plan.md  pyproject.toml  pytest.ini  sync-messages-validation-summary.md  sync-refactor-todo-202506151432.md  test_factory_detection.py  (+2 more)
data/: .btrsnap.ini
data/.btrsnap/: config  config.toml
data/.dsg/: config.yml
docs/: STATUS-20250605-093256.md  STATUS-20250606-123800.md  STATUS-20250606-170000.md  auto-migration-implementation-status.md  cli-patterns-usage.md  cli-refactoring-design.md  cli-refactoring-todos.md  config-models-redesign.md  creative-integration-tests.md  current-development-status.md  dsg-clone-implementation-plan.md  extracted-migration-components.md  incremental-migration-strategy.md  integrity-architecture.md  manifest-merger-history-integration.md  migration-phase1-summary.md  normalized-cache-optimization-plan.md  phase2-migration-status.md  status-command-implementation-progress.md  status-sync-integration-test.md  status-testing-logical-issue.md  test-fixture-consolidation-plan.md  two-phase-migration-design.md  unicode-normalization-rsync-issue.md
docs/ai-collaboration/: AI-AI-COLLABORATION-EVOLUTION.md  DEV-CLAUDE-KNOWLEDGE.md
docs/archive/: COMPLETED-config-refactoring.md  DSG_INIT_BUG_REPORT.md  INIT_IMPLEMENTATION_NOTES.md  NEXT_STEPS_PLAN.md  SYNC-INTEGRATION-TEST-PLAN-20250613-101919.md  TODO-refactoring-20250606-195811.md  TRANSACTION_SYNC_BUG.md  ZFS_TRANSACTION_ANALYSIS.md  cli-refactoring-todos.md  cli-remaining-todos.md  config-upgrade-status.md  dsg-clone-implementation-plan.md  dsg-status-todo.md  history-refactoring-plan.md  host-detection-architecture-decision.md  host-detection-architecture-status.md  outstanding-todos.md  phase1-normalization-exploration.md  phase3-command-integration-plan.md  project-state-summary.md  sep-concerns-dsg-cli-plan.md  status-sync-integration-test.md  (+2 more)
dummies/: Makefile  build_testdirs.py  notes.md
dummies/hand/: states.yml
scripts/: MIGRATION_README.md  Makefile  b2z.py  b2z.sh  batch_migrate.py  batch_normalize.py  btr-to-zfs-dsg.py  btr-to-zfs-snap.py  btrsnap_to_dsg.py  check_normalization.py  clone-for-test.sh  create-test-repo.py  dsg-blame.py  install.sh  list_btrsnap_symlinks.sh  run_phase3_all.sh  set_readonly_all.sh  setup-hooks.sh  snap2btr.sh  test-zfs-scripts.sh  test_migration.py  test_normalization.py  update-readme-cli-help.py  validate_migration.py  validate_ssh_file_ops.py  zfs-clone-creator.sh  zfs-snapshot-finalizer.sh
tests/: conftest.py  install.sh  test_backend_factory.py  test_backend_sync.py  test_backends.py  test_btrsnap.py  test_cli.py  test_cli_coverage.py  test_cli_patterns.py  test_cli_utils.py  test_command_executor.py  test_command_handlers.py  test_config.py  test_config_migration.py  test_config_redesign.py  test_directory_normalization.py  test_display.py  test_factory_compatibility.py  test_filename_validation.py  test_filename_validation_coverage.py  test_filesystem_normalization_diagnostic.py  test_history.py  test_host_utils.py  test_init.py  test_issue_24_import_bug.py  test_json_collector.py  test_lifecycle.py  test_locking.py  test_logging_setup.py  test_manifest.py  test_manifest_comparison.py  test_manifest_coverage.py  test_manifest_integration.py  test_manifest_merger.py  test_manifest_metadata_serialization.py  test_manifest_serialization.py  test_new_transaction_atomicity.py  test_operations.py  test_parameter_simplification.py  test_progress_reporting.py  (+27 more)
(+214 files in other folders)
