[project]
name = "dsg"
version = "0.0.1"
description = ""
authors = [
    {name = "Sam Z",email = "shimian.zhang@gmail.com"},
    {name = "Patrick Ball",email = "pball@hrdag.org"},
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "typer (>=0.15.3,<0.16.0)",
    "tomlkit (>=0.13.2,<0.14.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "xxhash (>=3.5.0,<4.0.0)",
    "orjson (>=3.9.15,<4.0.0)"
]

[tool.poetry]
packages = [{include = "dsg", from = "src"}]

[project.scripts]
dsg = "dsg.cli:main"

# [tool.poetry.scripts]
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-package"
version = "0.1.0"
# other project metadata...

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
expects = "^0.9.0"
pyfakefs = "^5.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# done.
